--- a/pom.xml
+++ b/pom.xml
@@ -7,4 +7,34 @@
     <groupId>BusinessAbstraction</groupId>
     <artifactId>DaCeMo</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <repositories>
+        <repository>
+            <id>stardog-public</id>
+            <url>http://maven.stardog.com</url>
+        </repository>
+    </repositories>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.complexible.stardog</groupId>
+            <artifactId>client-http</artifactId>
+            <version>5.0.1</version>
+            <type>pom</type>
+        </dependency>
+    </dependencies>
 </project>
