--- a/pom.xml
+++ b/pom.xml
@@ -6,5 +6,42 @@
 
     <groupId>BusinessAbstraction</groupId>
     <artifactId>DaCeMo</artifactId>
+    <packaging>war</packaging>
+    <name>DaCeMo Visualisation</name>
     <version>1.0-SNAPSHOT</version>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <webXml>src/main/web/WEB-INF/web.xml</webXml>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <url>http://localhost:8087/manager/text</url>
+                    <server>TomcatServer</server>
+                    <username>admin</username>
+                    <password>dev</password>
+                    <path>/dacemo</path>
+                    <update>true</update>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
