--- a/pom.xml
+++ b/pom.xml
@@ -34,10 +34,10 @@
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
                 <configuration>
-                    <url>http://localhost:8087/manager/text</url>
+                    <url>http://localhost:8080/manager/text</url>
                     <server>TomcatServer</server>
                     <username>admin</username>
-                    <password>dev</password>
+                    <password>admin</password>
                     <path>/dacemo</path>
                     <update>true</update>
                 </configuration>
