Upload basic servlet for sending massage to frontend

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,17 @@
     <packaging>war</packaging>
     <name>DaCeMo Visualisation</name>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.0</version>
+            <scope>provided</scope>
+        </dependency>
+
+
+    </dependencies>
 
     <build>
         <plugins>
