--- a/pom.xml
+++ b/pom.xml
@@ -83,5 +83,11 @@
             <version>4.3</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
     </dependencies>
 </project>
