Added Link class. Can send the JSON file of triple to the server.

--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,11 @@
             <version>1.7.26</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
