Updated process_query.js: Removed commented code. Updated web.xml: Renamed servlets.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -27,11 +27,11 @@
     </servlet-mapping>
 
     <servlet>
-        <servlet-name>NodeDiveServlet</servlet-name>
-        <servlet-class>Servlet.NodeDiveServlet</servlet-class>
+        <servlet-name>NodeDescriptionServlet</servlet-name>
+        <servlet-class>Servlet.NodeDescriptionServlet</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>NodeDiveServlet</servlet-name>
+        <servlet-name>NodeDescriptionServlet</servlet-name>
         <url-pattern>/Servlet/NodeDiveServlet</url-pattern>
     </servlet-mapping>
 
